test_src/compiler_errors/types/boolean/WhileNumberError.b
class WhileNumberError {
    void test() {
        Int i = 0;
        while (i) {
            println(i);
            i--;
        }
    }
}
